--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">TMSAndroidJatPack</string>
     <string name="title_activity_details">DetailsActivity</string>
+    <string name="style_dance_text">Dance Styles</string>
+    <string name="date_format">hh:mm:ss a</string>
 </resources>
